--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "texap-api",
+  "name": "albaseet-cms",
   "private": true,
   "version": "1.3.0",
   "description": "A Strapi application",
@@ -8,6 +8,9 @@
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
+  },
+  "engines": {
+    "node": "16.14.0"
   },
   "dependencies": {
     "knex": "0.21.18",
