--- a/api/cantact-page-title/models/cantact-page-title.settings.json
+++ b/api/cantact-page-title/models/cantact-page-title.settings.json
@@ -2,7 +2,7 @@
   "kind": "singleType",
   "collectionName": "cantact_page_titles",
   "info": {
-    "name": "cantact Page Title",
+    "name": "*5-1*Contact/contact Page Title",
     "description": ""
   },
   "options": {
@@ -10,27 +10,51 @@
     "timestamps": true,
     "draftAndPublish": true
   },
-  "pluginOptions": {},
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "title": {
       "type": "string",
       "default": "Contact Us",
-      "required": true
+      "required": true,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "homeText": {
       "type": "string",
       "default": "Home",
-      "required": true
+      "required": true,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "homeUrl": {
       "type": "string",
       "required": true,
-      "default": "/"
+      "default": "/",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "activePage": {
       "type": "string",
       "default": "Contact Us",
-      "required": true
+      "required": true,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     }
   }
 }
