--- a/api/pricing-table/models/pricing-table.settings.json
+++ b/api/pricing-table/models/pricing-table.settings.json
@@ -2,7 +2,7 @@
   "kind": "singleType",
   "collectionName": "pricing_tables",
   "info": {
-    "name": "pricing Table",
+    "name": "*4-2*pricing/pricing Table",
     "description": ""
   },
   "options": {
@@ -10,23 +10,47 @@
     "timestamps": true,
     "draftAndPublish": true
   },
-  "pluginOptions": {},
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "subTitle": {
       "type": "string",
-      "required": true
+      "required": true,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "title": {
       "type": "string",
-      "required": true
+      "required": true,
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "shortDec": {
-      "type": "string"
+      "type": "string",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     },
     "pricing": {
       "type": "component",
       "repeatable": true,
-      "component": "pricing-table.pricing"
+      "component": "pricing-table.pricing",
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      }
     }
   }
 }
